--- a/Code.ipynb
+++ b/Code.ipynb
@@ -222,7 +222,7 @@
     "\n",
     "A network with 2 convolutional layers and a fully-connected layer is shown in the image below.\n",
     "\n",
-    "<img src='notebook_ims/2_layer_conv.png' height=50% width=50% />\n",
+    "<img src='2_layer_conv.png' height=50% width=50% />\n",
     "\n",
     "The more convolutional layers we include, the more complex patterns in color and shape a model can detect. Conventionally we  include 2 or 3 convolutional layers as well as linear layers + dropout in between to avoid overfitting.\n",
     "\n",
